--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
+    "css-module-flow": "^1.0.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "empty": "^0.10.1",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
@@ -51,11 +52,14 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "flow": "flow"
   },
   "devDependencies": {
     "eslint": "^4.18.1",
+    "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-react": "^7.7.0",
+    "flow-bin": "^0.68.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6"
   },
@@ -97,8 +101,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   }
 }
